--- a/MobilePhoneShopProject/MobilePhoneShopWebParent/MobilePhoneShopBackEnd/src/main/resources/templates/categories/categories.html
+++ b/MobilePhoneShopProject/MobilePhoneShopWebParent/MobilePhoneShopBackEnd/src/main/resources/templates/categories/categories.html
@@ -14,34 +14,13 @@
 			<h2>Quản lý loại hàng</h2>
 			<a th:href="@{/categories/new}" class="fas fa-folder-plus fa-2x icon-blue"></a>
 			&nbsp; | &nbsp;
-			<a th:href="@{/users/categories/csv}" class="fas fa-file-csv fa-2x icon-dark"></a>
-			<!-- &nbsp; | &nbsp;
-			<a th:href="@{/users/export/excel}" class="fas fa-file-excel fa-2x icon-green"></a> -->
+			<a th:href="@{/categories/export/csv}" class="fas fa-file-csv fa-2x icon-dark"></a>
+			&nbsp; | &nbsp;
+			<a th:href="@{/categories/export/excel}" class="fas fa-file-excel fa-2x icon-green"></a>
 		</div>
-		
-		<!-- Bắt đầu hiển thị thông báo thêm thành công -->
-		<div th:if="${message != null}" class="alert alert-success text-center">
-			[[${message}]]
-		</div>
-		<!-- Kết thúc hiển thị thông báo thêm thành công -->
 		
 		<!-- Bắt đầu form tìm kiếm -->
-		<div>
-			<form th:action="@{/categories/page/1}" class="form-inline m-3">
-				<input type="hidden" name="sortField" th:value="${sortField}">
-				<input type="hidden" name="sortDirection" th:value="${sortDirection}">
-				Tìm kiếm:&nbsp;
-				<input type="search" name="keyword" th:value="${keyword}" class="form-control" required>
-				&nbsp;&nbsp;
-				<button type="submit" class="btn btn-primary">
-					<i class="fas fa-search"></i>
-				</button>
-				&nbsp;&nbsp;
-				<button type="button" class="btn btn-secondary" onclick="clearFilter()">
-					<i class="fas fa-eraser"></i>
-				</button>
-			</form>
-		</div>
+		<div th:replace="fragments :: search_form_and_message('/categories/page/1')"></div>
 		<!-- Kết thúc form tìm kiếm -->
 		
 		<!-- Bắt đầu tạo bảng chứa thông tin loại hàng (Loại hiển thị toàn bộ thông tin) -->
@@ -51,8 +30,8 @@
 					<tr>	
 						<th>Mã loại hàng</th>
 						<th>Ảnh loại hàng</th>
-						<th>Tên loại hàng</th>
-						<th>Tên riêng</th>
+						<th th:replace="fragments :: column_Link('/categories', 'name', 'Tên loại hàng', 'none')"/>
+						<th class="hideable-column">Tên riêng</th>
 						<th>Cho phép hiển thị</th>
 						<th>Thao tác</th>
 					</tr>
@@ -64,12 +43,14 @@
 						 	<img th:src="@{${category.imagePath}}" style="width: 100px" class="img-fluid">
 						 </td>
 						 <td>[[${category.name}]]</td>
-						 <td>[[${category.alias}]]</td>
+						 <td class="hideable-column">[[${category.alias}]]</td>
 						 <td>
-						 	<div th:replace ="fragments :: category_status"></div>
+						 	<div th:replace="fragments :: status(${category.enabled}, 'category', '/categories/' + ${category.id})"></div>
 						 </td>
 						 <td>
-						 	<div th:replace ="fragments :: category_actions"></div>
+						 	<div th:replace="fragments :: edit('category', '/categories/edit/' + ${category.id})"></div>
+						 	&nbsp;
+						 	<div th:replace="fragments :: delete('category', ${category.id}, '/categories/delete/' + ${category.id}, ${!category.hasChildren})"></div>
 						 </td>
 					</tr>
 				</tbody>
@@ -77,11 +58,55 @@
 		</div>
 		<!-- Kết thúc tạo bảng chứa thông tin loại hàng (Loại hiển thị toàn bộ thông tin) -->
 		
+		<!-- Bắt đầu tạo bảng chứa thông tin loại hàng (Loại hiển thị ít thông tin) -->
+		<div class="less-details">
+			<div th:each="category : ${listCategories}" class="row m-1">
+				<div class="col-4">
+					<img th:src="@{${category.imagePath}}" style="width: 100px" class="img-fluid">
+				</div>
+				<div class="col-8">
+					<div>[[${category.name}]]</div>
+					<div class="mt-2">
+						<div th:replace="fragments :: status(${category.enabled}, 'category', '/categories/' + ${category.id})"></div>				 
+						&nbsp;
+						<div th:replace="fragments :: edit('category', '/categories/edit/' + ${category.id})"></div>
+						&nbsp;
+					 	<div th:replace="fragments :: delete('category', ${category.id}, '/categories/delete/' + ${category.id}, ${!category.hasChildren})"></div>
+					</div>
+				</div>
+				<div>&nbsp;</div>
+			</div>
+		</div>
+		<!-- Kết thúc tạo bảng chứa thông tin loại hàng (Loại hiển thị ít thông tin) -->
+		
+		<!-- Bắt đầu hiện thông báo có thật sự muốn xoá loại hàng-->
+		<div th:replace="modal_fragments :: confirm_modal"></div>
+		<!-- Kết thúc hiện thông báo có thật sự muốn xoá loại hàng-->
+		
+		<!-- Bắt đầu điều khiển / chuyển số trang -->
+		<div th:replace="fragments :: pagination('/categories','categories')"></div>
+		<!-- Kết thúc điều khiển / chuyển số trang -->
+		
 		<!-- Bắt đầu Footer -->
-		<div th:replace="fragments :: footer()"></div>
+		<div th:replace="fragments :: footer"></div>
 		<!-- Kết thúc Footer -->
 
 	</div>
 	<!-- Kết thúc giao diện chính -->
+	
+	<!-- Bắt đầu code javascript -->
+	<script th:src="@{/js/common_list.js}"></script>
+	<script type="text/javascript">
+		moduleURL = "[[@{/categories}]]";
+		$(document).ready(function()
+		{
+			$(".link-delete").on("click",function(e)
+			{
+				e.preventDefault();
+				showDeleteConfirmModal($(this), 'category');
+			});
+		});
+	</script>
+	<!-- Kết thúc code javascript -->
 </body>
 </html>
