--- a/MobilePhoneShopProject/MobilePhoneShopWebParent/MobilePhoneShopBackEnd/src/main/resources/templates/error/404.html
+++ b/MobilePhoneShopProject/MobilePhoneShopWebParent/MobilePhoneShopBackEnd/src/main/resources/templates/error/404.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
 	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
-	<head th:replace="fragments :: page_Head('Trang không tồn tại')" />
+	<head th:replace="fragments :: page_Head('Trang không tồn tại','none')" />
 <body>
 
 	<!-- Bắt đầu giao diện chính -->
@@ -12,7 +12,7 @@
 		<!-- Kết thúc Header Menu -->		
 
 		<div class="m-3">
-			<h2>404 Error - Trang bạn đang tìm kiếm không tồn tại, vui lòng tìm trang khác!</h2>
+			<h2>404 Error - Trang bạn tìm không tồn tại!</h2>
 		</div>
 
 		<!-- Bắt đầu Footer -->
