--- a/MobilePhoneShopProject/MobilePhoneShopWebParent/MobilePhoneShopBackEnd/src/main/resources/templates/users/account_form.html
+++ b/MobilePhoneShopProject/MobilePhoneShopWebParent/MobilePhoneShopBackEnd/src/main/resources/templates/users/account_form.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-	<head th:replace="fragments :: page_Head('Thông tin cá nhân')"></head>
+	<head th:replace="fragments :: page_Head('Thông tin cá nhân','none')"></head>
 <body>
 
 	<!-- Bắt đầu giao diện chính -->
