--- a/MobilePhoneShopProject/MobilePhoneShopWebParent/MobilePhoneShopBackEnd/src/main/resources/templates/users/users.html
+++ b/MobilePhoneShopProject/MobilePhoneShopWebParent/MobilePhoneShopBackEnd/src/main/resources/templates/users/users.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="fragments :: page_Head('Quản lý nhân viên')" />
+<head th:replace="fragments :: page_Head('Quản lý nhân viên','none')" />
 <body>
 
 	<!-- Bắt đầu giao diện chính -->
