--- a/MobilePhoneShopProject/MobilePhoneShopWebParent/MobilePhoneShopBackEnd/src/main/resources/templates/error/403.html
+++ b/MobilePhoneShopProject/MobilePhoneShopWebParent/MobilePhoneShopBackEnd/src/main/resources/templates/error/403.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
 	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
-	<head th:replace="fragments :: page_Head('Trang không tồn tại')" />
+	<head th:replace="fragments :: page_Head('Trang không tồn tại','none')" />
 <body>
 
 	<!-- Bắt đầu giao diện chính -->
