--- a/MobilePhoneShopProject/MobilePhoneShopWebParent/MobilePhoneShopBackEnd/src/main/resources/templates/navigation.html
+++ b/MobilePhoneShopProject/MobilePhoneShopWebParent/MobilePhoneShopBackEnd/src/main/resources/templates/navigation.html
@@ -24,25 +24,55 @@
 			<!-- Bắt đầu menu -->
 			<div class="collapse navbar-collapse" id="topNavbar">
 				<ul class="navbar-nav">
-					<li class="nav-item" sec:authorize="hasAuthority('Admin')">
-						<a class="nav-link" th:href="@{/users}">Nhân viên</a>
-					</li>
-					<li class="nav-item" sec:authorize="hasAnyAuthority('Admin', 'Quản lý kho')">
-						<a class="nav-link" th:href="@{/categories}">Phân loại</a>
-					</li>
-					<li class="nav-item" sec:authorize="hasAnyAuthority('Admin', 'Quản lý kho')">
-						<a class="nav-link" th:href="@{/brands}">Hãng</a>
-					</li>
-					<li class="nav-item" 
-					sec:authorize="hasAnyAuthority('Admin', 'Quản lý kho', 'Nhân viên bán hàng', 'Shipper')">
-						<a class="nav-link" th:href="@{/products}">Sản phẩm</a>
-					</li> 
-					<li class="nav-item" sec:authorize="hasAnyAuthority('Admin', 'Nhân viên bán hàng')">
-						<a class="nav-link" th:href="@{/customs}">Khách hàng</a>
-					</li>
-					<li class="nav-item" sec:authorize="hasAnyAuthority('Admin', 'Nhân viên bán hàng')">
-						<a class="nav-link" th:href="@{/shipping}">Vận chuyển</a>
-					</li>
+					<th:block sec:authorize="hasAuthority('Admin')">
+						<li class="nav-item dropdown">
+							<a class="nav-link dropdown-toggle" data-toggle="dropdown" th:href="@{/users}">Nhân viên</a>
+							<div class="dropdown-menu">
+								<a class="dropdown-item" th:href="@{/users/new}">Thêm nhân viên</a>
+								<a class="dropdown-item" th:href="@{/users}">Xem danh sách nhân viên</a>
+							</div>
+						</li>
+					</th:block>
+					
+					<th:block sec:authorize="hasAnyAuthority('Admin', 'Quản lý kho')">
+						<li class="nav-item dropdown">
+							<a class="nav-link dropdown-toggle" data-toggle="dropdown" th:href="@{/categories}">Loại hàng</a>
+							<div class="dropdown-menu">
+								<a class="dropdown-item" th:href="@{/categories/new}">Thêm loại hàng</a>
+								<a class="dropdown-item" th:href="@{/categories}">Xem danh sách loại hàng</a>
+							</div>
+						</li>
+					
+						<li class="nav-item dropdown">
+							<a class="nav-link dropdown-toggle" data-toggle="dropdown" th:href="@{/brands}">Hãng</a>
+							<div class="dropdown-menu">
+								<a class="dropdown-item" th:href="@{/brands/new}">Thêm hãng</a>
+								<a class="dropdown-item" th:href="@{/brands}">Xem danh sách hãng</a>
+							</div>
+						</li>
+					</th:block>
+					
+					<th:block sec:authorize="hasAnyAuthority('Admin', 'Quản lý kho', 'Nhân viên bán hàng', 'Shipper')">
+						<li class="nav-item dropdown">
+							<a class="nav-link dropdown-toggle" data-toggle="dropdown" th:href="@{/products}">Sản phẩm</a>
+							<div class="dropdown-menu">
+								<a class="dropdown-item" th:href="@{/products/new}" 
+									sec:authorize="hasAnyAuthority('Admin', 'Quản lý kho')">
+									Thêm sản phẩm
+								</a>
+								<a class="dropdown-item" th:href="@{/products}">Xem danh sách sản phẩm</a>
+							</div>1
+						</li>
+					</th:block>
+					 
+					
+						<li class="nav-item" sec:authorize="hasAnyAuthority('Admin', 'Nhân viên bán hàng')">
+							<a class="nav-link" th:href="@{/customs}">Khách hàng</a>
+						</li>
+						<li class="nav-item" sec:authorize="hasAnyAuthority('Admin', 'Nhân viên bán hàng')">
+							<a class="nav-link" th:href="@{/shipping}">Vận chuyển</a>
+						</li>
+					
 					<li class="nav-item" sec:authorize="hasAnyAuthority('Admin', 'Nhân viên bán hàng', 'Shipper')">
 						<a class="nav-link" th:href="@{/orders}">Đơn hàng</a>
 					</li>
