--- a/MobilePhoneShopProject/MobilePhoneShopWebParent/MobilePhoneShopFrontEnd/src/main/resources/templates/index.html
+++ b/MobilePhoneShopProject/MobilePhoneShopWebParent/MobilePhoneShopFrontEnd/src/main/resources/templates/index.html
@@ -1,10 +1,26 @@
-<!DOCTYPE html>
-<html>
-<head>
-<meta charset="ISO-8859-1">
-<title>Welcome to Mobile Phone Shop</title>
-</head>
+	<!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org">
+<head th:replace="fragments :: page_Head('MobilePhone Shop', 'none')" />
 <body>
-	<h1>Welcome to Mobile Phone Shop</h1>
+	<div class="container-fluid">
+		<div th:replace="navigation :: header_menu"></div>
+		<!--/*<div t?h:replace="navigation :: search_nav"></div> */-->
+		<div>
+			<h1>Mua theo loại hàng</h1>
+		</div>
+		
+		<div class="row">
+			<div class="col-sm-2" th:each="category : ${listCategories}">
+				<div>
+					<img th:src="@{${category.imagePath}}" width="80" />
+				</div>
+				<div>
+					<a th:href="@{'/c/' + ${category.alias}}">[[${category.name}]]</a>
+				</div>
+			</div>
+		</div>
+	
+		<div th:replace="navigation :: footer_menu"></div>
+	</div>
 </body>
 </html>
